hard-gists/5849024/run.log
=== Docker Run Log for 5849024 ===
Started at: Mi 29. Okt 16:06:03 CET 2025

[2025-10-29 16:06:03] START: Running container for 5849024
[2025-10-29 16:06:03] SUCCESS: Container 3063f63ecb4fc08219aea09f742b73859eab67d6b5a9e5bd38b5eb24fb1611f0 started for 5849024
=== Container logs for 5849024 ===
  File "/snippet.py", line 157
    print time_str, " => ", to_time(ast)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5849024 ===
[2025-10-29 16:06:06] INFO: Container 3063f63ecb4fc08219aea09f742b73859eab67d6b5a9e5bd38b5eb24fb1611f0 has stopped
